--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ section{
 
 header{
     position: fixed;
-    top:0; left:0; right: 0;
+    top:0; 
+    width: 100%;
     background: white;
     padding: 16px 9%;
     display: flex;
