--- a/css/style.css
+++ b/css/style.css
@@ -528,4 +528,8 @@ header .fa-bars{
     .order form .inputBox .input{
         width: 100%;
     }
+    
+    header .logo{
+        font-size: 24px;
+    }
 }
